# test_is_vaje_iis

./: README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: process_data.yml
data/: .gitignore  processed.dvc  raw.dvc
data/processed/: .gitignore  current_data.csv  reference_dataset.csv.dvc
data/raw/: students.xlsx  students_scores.csv
models/: model.pkl
reports/: .gitignore
src/api/: serve_model.py
src/data/: drift_report.py  process_data.py  stability_tests.py
src/models/: train_eval.py
src/validation/: validate_data.py
