[project]
name = "test-is-vaje-iis"
version = "0.1.0"
description = ""
authors = [
    { name = "Blazhe Manev", email = "blaze_manev@yahoo.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy (>=1.22.4,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "pyaml (>=25.1.0,<26.0.0)",
    "great-expectations (==0.18.21)",
    "notebook (>=7.4.3,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "evidently (>=0.7.1,<0.8.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "tf2onnx (>=1.10.0,<1.16.1)",
    "dagshub (>=0.3.23,<1.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "fastapi (>=0.110.0,<1.0.0)",
    "uvicorn (>=0.29.0,<1.0.0)",
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
